# OpenGL-Billiards-Game

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/opengl/: opengl.h
public/3D-data/: Table Collision_Simplified.off  Table.off  Table_Collision.off  Table_Coloured.off  b.off  test.off
src/: CMakeLists.txt  DataStructures.h  gl_callback.c  gl_callback.h  initialisation.c  initialisation.h  main.c  main_functions.c  main_functions.h
src/data_structures/: CMakeLists.txt  camera.h  flags.h  geometry.h  objects.h
src/globals/: CMakeLists.txt  camera.h  flags.h  general.h  objects.h
src/input/: CMakeLists.txt  keyboard_utils.c  keyboard_utils.h  user_input.c  user_input.h
src/math/: CMakeLists.txt  collision.c  collision.h  geometry.h  matrix_operations.c  matrix_operations.h  vector_operations.c  vector_operations.h
src/modeling/: CMakeLists.txt  drawing.c  drawing.h  drawing_utilities.c  drawing_utilities.h  object_loading.c  object_loading.h
src/movement/: CMakeLists.txt  keyboard_utils.c  keyboard_utils.h
src/rendering/: CMakeLists.txt  display_functions.c  display_functions.h  text.c  text.h
src/rendering/animation/: CMakeLists.txt  animation.c  animation.h
src/transformations/: CMakeLists.txt  object_transformations.c  object_transformations.h
